# TradingBot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKTEST_REAL_TRADING_ALIGNMENT.md  IMPLEMENTATION_DEEP_DIVE.md  LANGGRAPH_INTEGRATION.md  README.md  ROADMAP_UPDATE_SUMMARY.md  TRADING_BACKTESTING_ALIGNMENT.md  TRADING_BOT_ROADMAP.md  USAGE.md  bug_analysis_and_fixes.md  config.env.template  format.bat  format.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  update_symbols_with_research.py
dashboard/: README.md  app.py  test_popular_symbols.html
dashboard/templates/: analytics.html  index.html
tests/: __init__.py  bug_fix_summary.md  simple_test.py  test_advanced_order_types.py  test_alpaca_comprehensive.py  test_backtest_bug.py  test_backtest_feature.py  test_comprehensive_integration.py  test_debug_main_data.py  test_debug_phantom_positions.py  test_enhanced_risk_management.py  test_feature_one.py  test_fix_backtest_bug.py  test_indicators_working.py  test_machine_learning_integration.py  test_main_data_generation.py  test_portfolio_calculation.py  test_portfolio_feature.py  test_portfolio_optimization.py  test_signal_generation.py  test_strategies.py  test_strategy_templates.py  test_technical_indicators.py  test_timeframes_feature.py  test_trading_bot.py
trading_bot/: __init__.py
trading_bot/backtesting/: __init__.py  engine.py  metrics.py  simple_metrics.py
trading_bot/core/: __init__.py  bot.py  config.py  events.py  exceptions.py  logging.py  models.py  (+2 more)
windows/: README.md  setup.bat
(+41 files in other folders)
